# zero2prod

./: .env  .gitignore  .rest  Cargo.toml  configuration.yaml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: general.yml  rust.yml
migrations/: 20241002190903_create_subscriptions_table.sql  20251209030707_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
