[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"



[dependencies]
actix-web = "4"
reqwest = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.219", features = ["derive"] }
config = "0.14"
[dependencies.sqlx]
version = "0.8"
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
